COMPILADOR/sintatico.output
State 50 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 $@2: %empty

    3 $@3: %empty

    4 $@4: %empty

    5 programa: cabecalho $@1 variaveis $@2 rotinas T_INICIO $@3 lista_comandos $@4 T_FIM

    6 cabecalho: T_PROGRAMA T_IDENTIFICADOR

    7 variaveis: %empty
    8          | declaracao_variaveis

    9 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
   10                     | tipo lista_variaveis

   11 tipo: T_LOGICO
   12     | T_INTEIRO

   13 lista_variaveis: lista_variaveis T_IDENTIFICADOR
   14                | T_IDENTIFICADOR

   15 rotinas: %empty

   16 $@5: %empty

   17 rotinas: $@5 funcoes

   18 funcoes: funcao
   19        | funcao funcoes

   20 $@6: %empty

   21 $@7: %empty

   22 $@8: %empty

   23 $@9: %empty

   24 funcao: T_FUNC tipo T_IDENTIFICADOR $@6 T_ABRE parametros T_FECHA $@7 variaveis $@8 T_INICIO lista_comandos $@9 T_FIMFUNC

   25 parametros: %empty
   26           | parametro parametros

   27 parametro: tipo T_IDENTIFICADOR

   28 lista_comandos: %empty
   29               | comando lista_comandos

   30 comando: entrada_saida
   31        | repeticao
   32        | selecao
   33        | atribuicao
   34        | retorno

   35 retorno: T_RETORNE expressao

   36 entrada_saida: leitura
   37              | escrita

   38 leitura: T_LEIA T_IDENTIFICADOR

   39 escrita: T_ESCREVA expressao

   40 $@10: %empty

   41 $@11: %empty

   42 repeticao: T_ENQUANTO $@10 expressao T_FACA $@11 lista_comandos T_FIMENQUANTO

   43 $@12: %empty

   44 $@13: %empty

   45 selecao: T_SE expressao T_ENTAO $@12 lista_comandos T_SENAO $@13 lista_comandos T_FIMSE

   46 $@14: %empty

   47 atribuicao: T_IDENTIFICADOR $@14 T_ATRIBUICAO expressao

   48 expressao: expressao T_VEZES expressao
   49          | expressao T_DIV expressao
   50          | expressao T_MAIS expressao
   51          | expressao T_MENOS expressao
   52          | expressao T_MAIOR expressao
   53          | expressao T_MENOR expressao
   54          | expressao T_IGUAL expressao
   55          | expressao T_E expressao
   56          | expressao T_OU expressao
   57          | termo

   58 identificador: T_IDENTIFICADOR

   59 chamada: %empty

   60 $@15: %empty

   61 $@16: %empty

   62 chamada: T_ABRE $@15 lista_argumentos $@16 T_FECHA

   63 lista_argumentos: %empty

   64 $@17: %empty

   65 lista_argumentos: expressao $@17 lista_argumentos

   66 termo: identificador chamada
   67      | T_NUMERO
   68      | T_V
   69      | T_F
   70      | T_NAO termo
   71      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 6
    T_INICIO (259) 5 24
    T_FIM (260) 5
    T_LEIA (261) 38
    T_ESCREVA (262) 39
    T_SE (263) 45
    T_ENTAO (264) 45
    T_SENAO (265) 45
    T_FIMSE (266) 45
    T_ENQUANTO (267) 42
    T_FACA (268) 42
    T_FIMENQUANTO (269) 42
    T_INTEIRO (270) 12
    T_LOGICO (271) 11
    T_MAIS (272) 50
    T_MENOS (273) 51
    T_VEZES (274) 48
    T_DIV (275) 49
    T_MAIOR (276) 52
    T_MENOR (277) 53
    T_IGUAL (278) 54
    T_E (279) 55
    T_OU (280) 56
    T_NAO (281) 70
    T_ABRE (282) 24 62 71
    T_FECHA (283) 24 62 71
    T_ATRIBUICAO (284) 47
    T_V (285) 68
    T_F (286) 69
    T_IDENTIFICADOR (287) 6 13 14 24 27 38 47 58
    T_NUMERO (288) 67
    T_FUNC (289) 24
    T_FIMFUNC (290) 24
    T_RETORNE (291) 35


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    programa (38)
        on left: 5
        on right: 0
    $@1 (39)
        on left: 1
        on right: 5
    $@2 (40)
        on left: 2
        on right: 5
    $@3 (41)
        on left: 3
        on right: 5
    $@4 (42)
        on left: 4
        on right: 5
    cabecalho (43)
        on left: 6
        on right: 5
    variaveis (44)
        on left: 7 8
        on right: 5 24
    declaracao_variaveis (45)
        on left: 9 10
        on right: 8 9
    tipo (46)
        on left: 11 12
        on right: 9 10 24 27
    lista_variaveis (47)
        on left: 13 14
        on right: 9 10 13
    rotinas (48)
        on left: 15 17
        on right: 5
    $@5 (49)
        on left: 16
        on right: 17
    funcoes (50)
        on left: 18 19
        on right: 17 19
    funcao (51)
        on left: 24
        on right: 18 19
    $@6 (52)
        on left: 20
        on right: 24
    $@7 (53)
        on left: 21
        on right: 24
    $@8 (54)
        on left: 22
        on right: 24
    $@9 (55)
        on left: 23
        on right: 24
    parametros (56)
        on left: 25 26
        on right: 24 26
    parametro (57)
        on left: 27
        on right: 26
    lista_comandos (58)
        on left: 28 29
        on right: 5 24 29 42 45
    comando (59)
        on left: 30 31 32 33 34
        on right: 29
    retorno (60)
        on left: 35
        on right: 34
    entrada_saida (61)
        on left: 36 37
        on right: 30
    leitura (62)
        on left: 38
        on right: 36
    escrita (63)
        on left: 39
        on right: 37
    repeticao (64)
        on left: 42
        on right: 31
    $@10 (65)
        on left: 40
        on right: 42
    $@11 (66)
        on left: 41
        on right: 42
    selecao (67)
        on left: 45
        on right: 32
    $@12 (68)
        on left: 43
        on right: 45
    $@13 (69)
        on left: 44
        on right: 45
    atribuicao (70)
        on left: 47
        on right: 33
    $@14 (71)
        on left: 46
        on right: 47
    expressao (72)
        on left: 48 49 50 51 52 53 54 55 56 57
        on right: 35 39 42 45 47 48 49 50 51 52 53 54 55 56 65 71
    identificador (73)
        on left: 58
        on right: 66
    chamada (74)
        on left: 59 62
        on right: 66
    $@15 (75)
        on left: 60
        on right: 62
    $@16 (76)
        on left: 61
        on right: 62
    lista_argumentos (77)
        on left: 63 65
        on right: 62 65
    $@17 (78)
        on left: 64
        on right: 65
    termo (79)
        on left: 66 67 68 69 70 71
        on right: 57 70


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    6 cabecalho: T_PROGRAMA . T_IDENTIFICADOR

    T_IDENTIFICADOR  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    5 programa: cabecalho . $@1 variaveis $@2 rotinas T_INICIO $@3 lista_comandos $@4 T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 4

    6 cabecalho: T_PROGRAMA T_IDENTIFICADOR .

    $default  reduce using rule 6 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    5 programa: cabecalho $@1 . variaveis $@2 rotinas T_INICIO $@3 lista_comandos $@4 T_FIM

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 7 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 7

   12 tipo: T_INTEIRO .

    $default  reduce using rule 12 (tipo)


State 8

   11 tipo: T_LOGICO .

    $default  reduce using rule 11 (tipo)


State 9

    5 programa: cabecalho $@1 variaveis . $@2 rotinas T_INICIO $@3 lista_comandos $@4 T_FIM

    $default  reduce using rule 2 ($@2)

    $@2  go to state 12


State 10

    8 variaveis: declaracao_variaveis .

    $default  reduce using rule 8 (variaveis)


State 11

    9 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
   10                     | tipo . lista_variaveis

    T_IDENTIFICADOR  shift, and go to state 13

    lista_variaveis  go to state 14


State 12

    5 programa: cabecalho $@1 variaveis $@2 . rotinas T_INICIO $@3 lista_comandos $@4 T_FIM

    T_FUNC    reduce using rule 16 ($@5)
    $default  reduce using rule 15 (rotinas)

    rotinas  go to state 15
    $@5      go to state 16


State 13

   14 lista_variaveis: T_IDENTIFICADOR .

    $default  reduce using rule 14 (lista_variaveis)


State 14

    9 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
   10                     | tipo lista_variaveis .
   13 lista_variaveis: lista_variaveis . T_IDENTIFICADOR

    T_INTEIRO        shift, and go to state 7
    T_LOGICO         shift, and go to state 8
    T_IDENTIFICADOR  shift, and go to state 17

    $default  reduce using rule 10 (declaracao_variaveis)

    declaracao_variaveis  go to state 18
    tipo                  go to state 11


State 15

    5 programa: cabecalho $@1 variaveis $@2 rotinas . T_INICIO $@3 lista_comandos $@4 T_FIM

    T_INICIO  shift, and go to state 19


State 16

   17 rotinas: $@5 . funcoes

    T_FUNC  shift, and go to state 20

    funcoes  go to state 21
    funcao   go to state 22


State 17

   13 lista_variaveis: lista_variaveis T_IDENTIFICADOR .

    $default  reduce using rule 13 (lista_variaveis)


State 18

    9 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 9 (declaracao_variaveis)


State 19

    5 programa: cabecalho $@1 variaveis $@2 rotinas T_INICIO . $@3 lista_comandos $@4 T_FIM

    $default  reduce using rule 3 ($@3)

    $@3  go to state 23


State 20

   24 funcao: T_FUNC . tipo T_IDENTIFICADOR $@6 T_ABRE parametros T_FECHA $@7 variaveis $@8 T_INICIO lista_comandos $@9 T_FIMFUNC

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    tipo  go to state 24


State 21

   17 rotinas: $@5 funcoes .

    $default  reduce using rule 17 (rotinas)


State 22

   18 funcoes: funcao .
   19        | funcao . funcoes

    T_FUNC  shift, and go to state 20

    $default  reduce using rule 18 (funcoes)

    funcoes  go to state 25
    funcao   go to state 22


State 23

    5 programa: cabecalho $@1 variaveis $@2 rotinas T_INICIO $@3 . lista_comandos $@4 T_FIM

    T_LEIA           shift, and go to state 26
    T_ESCREVA        shift, and go to state 27
    T_SE             shift, and go to state 28
    T_ENQUANTO       shift, and go to state 29
    T_IDENTIFICADOR  shift, and go to state 30
    T_RETORNE        shift, and go to state 31

    $default  reduce using rule 28 (lista_comandos)

    lista_comandos  go to state 32
    comando         go to state 33
    retorno         go to state 34
    entrada_saida   go to state 35
    leitura         go to state 36
    escrita         go to state 37
    repeticao       go to state 38
    selecao         go to state 39
    atribuicao      go to state 40


State 24

   24 funcao: T_FUNC tipo . T_IDENTIFICADOR $@6 T_ABRE parametros T_FECHA $@7 variaveis $@8 T_INICIO lista_comandos $@9 T_FIMFUNC

    T_IDENTIFICADOR  shift, and go to state 41


State 25

   19 funcoes: funcao funcoes .

    $default  reduce using rule 19 (funcoes)


State 26

   38 leitura: T_LEIA . T_IDENTIFICADOR

    T_IDENTIFICADOR  shift, and go to state 42


State 27

   39 escrita: T_ESCREVA . expressao

    T_NAO            shift, and go to state 43
    T_ABRE           shift, and go to state 44
    T_V              shift, and go to state 45
    T_F              shift, and go to state 46
    T_IDENTIFICADOR  shift, and go to state 47
    T_NUMERO         shift, and go to state 48

    expressao      go to state 49
    identificador  go to state 50
    termo          go to state 51


State 28

   45 selecao: T_SE . expressao T_ENTAO $@12 lista_comandos T_SENAO $@13 lista_comandos T_FIMSE

    T_NAO            shift, and go to state 43
    T_ABRE           shift, and go to state 44
    T_V              shift, and go to state 45
    T_F              shift, and go to state 46
    T_IDENTIFICADOR  shift, and go to state 47
    T_NUMERO         shift, and go to state 48

    expressao      go to state 52
    identificador  go to state 50
    termo          go to state 51


State 29

   42 repeticao: T_ENQUANTO . $@10 expressao T_FACA $@11 lista_comandos T_FIMENQUANTO

    $default  reduce using rule 40 ($@10)

    $@10  go to state 53


State 30

   47 atribuicao: T_IDENTIFICADOR . $@14 T_ATRIBUICAO expressao

    $default  reduce using rule 46 ($@14)

    $@14  go to state 54


State 31

   35 retorno: T_RETORNE . expressao

    T_NAO            shift, and go to state 43
    T_ABRE           shift, and go to state 44
    T_V              shift, and go to state 45
    T_F              shift, and go to state 46
    T_IDENTIFICADOR  shift, and go to state 47
    T_NUMERO         shift, and go to state 48

    expressao      go to state 55
    identificador  go to state 50
    termo          go to state 51


State 32

    5 programa: cabecalho $@1 variaveis $@2 rotinas T_INICIO $@3 lista_comandos . $@4 T_FIM

    $default  reduce using rule 4 ($@4)

    $@4  go to state 56


State 33

   29 lista_comandos: comando . lista_comandos

    T_LEIA           shift, and go to state 26
    T_ESCREVA        shift, and go to state 27
    T_SE             shift, and go to state 28
    T_ENQUANTO       shift, and go to state 29
    T_IDENTIFICADOR  shift, and go to state 30
    T_RETORNE        shift, and go to state 31

    $default  reduce using rule 28 (lista_comandos)

    lista_comandos  go to state 57
    comando         go to state 33
    retorno         go to state 34
    entrada_saida   go to state 35
    leitura         go to state 36
    escrita         go to state 37
    repeticao       go to state 38
    selecao         go to state 39
    atribuicao      go to state 40


State 34

   34 comando: retorno .

    $default  reduce using rule 34 (comando)


State 35

   30 comando: entrada_saida .

    $default  reduce using rule 30 (comando)


State 36

   36 entrada_saida: leitura .

    $default  reduce using rule 36 (entrada_saida)


State 37

   37 entrada_saida: escrita .

    $default  reduce using rule 37 (entrada_saida)


State 38

   31 comando: repeticao .

    $default  reduce using rule 31 (comando)


State 39

   32 comando: selecao .

    $default  reduce using rule 32 (comando)


State 40

   33 comando: atribuicao .

    $default  reduce using rule 33 (comando)


State 41

   24 funcao: T_FUNC tipo T_IDENTIFICADOR . $@6 T_ABRE parametros T_FECHA $@7 variaveis $@8 T_INICIO lista_comandos $@9 T_FIMFUNC

    $default  reduce using rule 20 ($@6)

    $@6  go to state 58


State 42

   38 leitura: T_LEIA T_IDENTIFICADOR .

    $default  reduce using rule 38 (leitura)


State 43

   70 termo: T_NAO . termo

    T_NAO            shift, and go to state 43
    T_ABRE           shift, and go to state 44
    T_V              shift, and go to state 45
    T_F              shift, and go to state 46
    T_IDENTIFICADOR  shift, and go to state 47
    T_NUMERO         shift, and go to state 48

    identificador  go to state 50
    termo          go to state 59


State 44

   71 termo: T_ABRE . expressao T_FECHA

    T_NAO            shift, and go to state 43
    T_ABRE           shift, and go to state 44
    T_V              shift, and go to state 45
    T_F              shift, and go to state 46
    T_IDENTIFICADOR  shift, and go to state 47
    T_NUMERO         shift, and go to state 48

    expressao      go to state 60
    identificador  go to state 50
    termo          go to state 51


State 45

   68 termo: T_V .

    $default  reduce using rule 68 (termo)


State 46

   69 termo: T_F .

    $default  reduce using rule 69 (termo)


State 47

   58 identificador: T_IDENTIFICADOR .

    $default  reduce using rule 58 (identificador)


State 48

   67 termo: T_NUMERO .

    $default  reduce using rule 67 (termo)


State 49

   39 escrita: T_ESCREVA expressao .
   48 expressao: expressao . T_VEZES expressao
   49          | expressao . T_DIV expressao
   50          | expressao . T_MAIS expressao
   51          | expressao . T_MENOS expressao
   52          | expressao . T_MAIOR expressao
   53          | expressao . T_MENOR expressao
   54          | expressao . T_IGUAL expressao
   55          | expressao . T_E expressao
   56          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 61
    T_MENOS  shift, and go to state 62
    T_VEZES  shift, and go to state 63
    T_DIV    shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69

    $default  reduce using rule 39 (escrita)


State 50

   66 termo: identificador . chamada

    T_ABRE  shift, and go to state 70

    T_ABRE    [reduce using rule 59 (chamada)]
    $default  reduce using rule 59 (chamada)

    chamada  go to state 71


State 51

   57 expressao: termo .

    $default  reduce using rule 57 (expressao)


State 52

   45 selecao: T_SE expressao . T_ENTAO $@12 lista_comandos T_SENAO $@13 lista_comandos T_FIMSE
   48 expressao: expressao . T_VEZES expressao
   49          | expressao . T_DIV expressao
   50          | expressao . T_MAIS expressao
   51          | expressao . T_MENOS expressao
   52          | expressao . T_MAIOR expressao
   53          | expressao . T_MENOR expressao
   54          | expressao . T_IGUAL expressao
   55          | expressao . T_E expressao
   56          | expressao . T_OU expressao

    T_ENTAO  shift, and go to state 72
    T_MAIS   shift, and go to state 61
    T_MENOS  shift, and go to state 62
    T_VEZES  shift, and go to state 63
    T_DIV    shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69


State 53

   42 repeticao: T_ENQUANTO $@10 . expressao T_FACA $@11 lista_comandos T_FIMENQUANTO

    T_NAO            shift, and go to state 43
    T_ABRE           shift, and go to state 44
    T_V              shift, and go to state 45
    T_F              shift, and go to state 46
    T_IDENTIFICADOR  shift, and go to state 47
    T_NUMERO         shift, and go to state 48

    expressao      go to state 73
    identificador  go to state 50
    termo          go to state 51


State 54

   47 atribuicao: T_IDENTIFICADOR $@14 . T_ATRIBUICAO expressao

    T_ATRIBUICAO  shift, and go to state 74


State 55

   35 retorno: T_RETORNE expressao .
   48 expressao: expressao . T_VEZES expressao
   49          | expressao . T_DIV expressao
   50          | expressao . T_MAIS expressao
   51          | expressao . T_MENOS expressao
   52          | expressao . T_MAIOR expressao
   53          | expressao . T_MENOR expressao
   54          | expressao . T_IGUAL expressao
   55          | expressao . T_E expressao
   56          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 61
    T_MENOS  shift, and go to state 62
    T_VEZES  shift, and go to state 63
    T_DIV    shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69

    $default  reduce using rule 35 (retorno)


State 56

    5 programa: cabecalho $@1 variaveis $@2 rotinas T_INICIO $@3 lista_comandos $@4 . T_FIM

    T_FIM  shift, and go to state 75


State 57

   29 lista_comandos: comando lista_comandos .

    $default  reduce using rule 29 (lista_comandos)


State 58

   24 funcao: T_FUNC tipo T_IDENTIFICADOR $@6 . T_ABRE parametros T_FECHA $@7 variaveis $@8 T_INICIO lista_comandos $@9 T_FIMFUNC
